--- a/interview/templates/main_app/base.html
+++ b/interview/templates/main_app/base.html
@@ -5,8 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<a url="{% url 'main_app:index'%}">Product list</a>
-<a url="{% url 'main_app:create_product'%}">Create product</a>
+<a href="{% url 'main_app:index'%}">Product list</a> <br>
+<a href="{% url 'main_app:create_product'%}">Create product</a><br>
  {% block content %} {% endblock %}
 </body>
 </html>
