--- a/interview/templates/main_app/create_product.html
+++ b/interview/templates/main_app/create_product.html
@@ -1,2 +1,4 @@
-{% extends 'products/base.html' %}
-
+{% extends 'main_app/base.html' %}
+{% block content %}
+<h1>create product page</h1>
+{% endblock %}
