--- a/interview/templates/main_app/base.html
+++ b/interview/templates/main_app/base.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="{% url 'main_app:index'%}">Product list</a> <br>
-<a href="{% url 'main_app:create_product'%}">Create product</a><br>
+<a href="{% url 'main_app:add_product'%}">Create product</a><br>
  {% block content %} {% endblock %}
 </body>
 </html>
