--- a/interview/templates/components/navbar.html
+++ b/interview/templates/components/navbar.html
@@ -1,21 +1,21 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"></a>
         <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarColor02"
                 aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarColor02">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="{% url 'main_app:index'%}">Product list</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'main_app:add_product'%}">Create product</a>
-                </li>
+<!--            <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
+<!--                <li class="nav-item active">-->
+<!--                    <a class="nav-link" aria-current="page" href="{% url 'main_app:index'%}">Product list</a>-->
+<!--                </li>-->
+<!--                <li class="nav-item">-->
+<!--                    <a class="nav-link" href="{% url 'main_app:add_product'%}">Create product</a>-->
+<!--                </li>-->
 
-            </ul>
+<!--            </ul>-->
 
             <ul class="navbar-nav d-flex flex-row">
                 <!-- Icons -->
