--- a/interview/templates/main_app/good_create.html
+++ b/interview/templates/main_app/good_create.html
@@ -1,12 +1,2 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block content %}
-<form action="{% url 'main_app:add_product' %}" method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="card">
-        <div class="card-header">Добавить продукт</div>
-        <div class="card-body">{{ form.as_p }}</div>
-        <div class="card-footer"><input class="form-control btn btn-info" type="submit" value="Добавить"></div>
-    </div>
-</form>
-{% endblock %}
+{% csrf_token %}
+{{ form.as_p }}
