--- a/interview/templates/main_app/goods_list.html
+++ b/interview/templates/main_app/goods_list.html
@@ -1,7 +1,4 @@
-{% extends 'base.html' %}
 {% load static %}
-{% block content %}
-<table class="table table-striped">
     <thead>
     <tr>
         <th scope="row">ID</th>
@@ -13,7 +10,7 @@
     </tr>
     </thead>
     <tbody>
-    {% for product in object_list %}
+    {% for product in products %}
     <tr>
         <th scope="row">{{product.id}}</th>
         <td>{{product.product_name}}</td>
@@ -24,5 +21,3 @@
     </tr>
     {% endfor %}
     </tbody>
-</table>
-{% endblock %}
